exports[`HitsPerPage applies default translations 0`] = `
<label>
  Hits per page
  <select
    onChange={[Function anonymous]}
    value={111}>
    <option
      value={111}>
      111
    </option>
    <option
      value={333}>
      333
    </option>
    <option
      value={666}>
      666
    </option>
  </select>
</label>
`;

exports[`HitsPerPage applies translations 0`] = `
<label>
  HITS_LABEL
  <select
    onChange={[Function anonymous]}
    value={111}>
    <option
      value={111}>
      HITS_VALUE_111
    </option>
    <option
      value={333}>
      HITS_VALUE_333
    </option>
    <option
      value={666}>
      HITS_VALUE_666
    </option>
  </select>
</label>
`;
